# basic_unix_sytem_cpp

./: .gitignore  README.md  basics_compiler.md  extensions.vscode  gdb.info  init.zsh  links.md  markdown_display  programs.md  projects.md  settings.json
Bash/: README.md
C++/: add_new_class.py  basic_cpp.md  basics_compiler.md  editorconfig.md  main.cpp  value_categories.md
C++/TemperatureBot/TemperatureReader/src/: CMakeLists.txt
C++/TemperatureBot/TemperatureReader/test/: CMakeLists.txt  testmain.cpp
C++/basic_library/: DumbMath.cpp  DumbMath.hpp  makefile  to_build_libraries.md
C++/cmake/: cmake_flags.md
C++/design_patterns/: design patterns.code-workspace
C++/design_patterns/creational_patterns/AbstractFactory/test/: CMakeLists.txt  testmain.cpp
C++/design_patterns/creational_patterns/Prototype/test/: CMakeLists.txt
C++/design_patterns/creational_patterns/Singleton/test/: CMakeLists.txt  testmain.cpp
C++/design_patterns/structural_patterns/Adapter/src/: CMakeLists.txt
C++/design_patterns/structural_patterns/Adapter/src/include/: TextView.hpp
C++/design_patterns/structural_patterns/Adapter/test/: CMakeLists.txt
C++/design_patterns/structural_patterns/Bridge/src/: CMakeLists.txt  Coord.cpp  Window.cpp
C++/design_patterns/structural_patterns/Bridge/src/include/: WindowImp.hpp
C++/design_patterns/structural_patterns/Composite/src/: CMakeLists.txt  Chassis.cpp  CompositeEquipment.cpp  Equipment.cpp  FloppyDisk.cpp  Iterator.cpp
C++/design_patterns/structural_patterns/Composite/src/include/: Chassis.hpp  CompositeEquipment.hpp  Equipment.hpp  FloppyDisk.hpp  Iterator.hpp  Window.hpp  XWindowImp.hpp
C++/design_patterns/structural_patterns/Decorator/src/: BorderDecorator.cpp  CMakeLists.txt  Decorator.cpp  TextView.cpp  VisualComponent.cpp
C++/design_patterns/structural_patterns/Decorator/src/include/: BorderDecorator.hpp  Decorator.hpp  TextView.hpp  VisualComponent.hpp
C++/design_patterns/structural_patterns/Decorator/test/: CMakeLists.txt
C++/design_patterns/structural_patterns/Facade/src/: CMakeLists.txt  Facade.cpp
C++/design_patterns/structural_patterns/Facade/src/include/: Facade.hpp
C++/doc/: basic_cpp.md  value_categories.md
C++/doxygen/: Doxyfile  main.cpp
C++/fibonacci_template/: CMakeLists.txt  Fibonacci.cpp  Fibonacci_test.cpp  main.cpp
C++/googletest/: DumbMath_unittest.cpp  a.out  cppclean.md  gtest.md
C++/helloworld/: a.out  compiler.md  hw
C++/rule_of_five/: .out_no_elide_constructors.swp  <  a.out  main.cpp  makefile  out_no_elide_constructors  out_yes_elide_constructors  string.cpp  string.hpp
Erlang/: README.md
Haskell/: 04_type_declaration.hs  05_pattern_matching.hs  06_recursion.hs  08_modules.hs  README.md  interresting_recursions.hs  makefile  pitfalls.md  syntax.md  to_check.md
Haskell/learnyouahaskell/: 01_baby_steps.hs  02_list_triangles.hs  03_typeclasses.hs  04_type_declaration.hs  05_pattern_matching.hs  07_higher_order_functions.hs  08_01_data_list.hs  (+46 more)
Perl6/: README.md
Python/: README.md  workspace_python.code-workspace
Racket/: README.md  syntax.md
Rust/: currently_at  links.md  panic_or_result.md
Rust/book/09_01_panic/: Cargo.toml
Rust/book/09_01_panic/src/: main.rs
Rust/cargo/: Cargo.toml
Rust/example_dir/: Cargo.toml  README.md
Rust/example_dir/examples/: simple.rs
Rust/workspaces/adder/: Cargo.toml
Rust/workspaces/adder/src/: main.rs
TemperatureBot/TemperatureReader/: CMakeLists.txt  TemperatureData.cpp  TemperatureData.hpp  filesystem.md
TemperatureBot/TemperatureReader/Debug/: CMakeCache.txt  Makefile
TemperatureBot/TemperatureReader/Debug/src/: Makefile
TemperatureBot/TemperatureReader/Debug/test/: TemperatureReader_test  cmake_install.cmake
TemperatureBot/TemperatureReader/Release/: cmake_install.cmake
TemperatureBot/TemperatureReader/Release/src/: Makefile
TemperatureBot/TemperatureReader/Release/test/: Makefile
TemperatureBot/TemperatureReader/build_make/: Makefile  build_static.md
TemperatureBot/TemperatureReader/src/: CMakeLists.txt  EmptyContainerException.hpp  TemperatureReader.cpp  TemperatureReader.hpp  main.cpp
TemperatureBot/TemperatureReader/static/: build_static.md
TemperatureBot/TemperatureReader/test/: CMakeLists.txt  testmain.cpp
analysis/: clang-static-analyzer.md  valgrind.md
cmake/cmake1/: CMakeLists.txt
design_patterns/: design patterns.code-workspace
design_patterns/AbstractFactory/src/: CMakeLists.txt  DoorNeedingSpell.hpp  EnchantedRoom.cpp  EnchantedRoom.hpp  Maze.hpp  MazeFactory.hpp  MazeGame.cpp  Spell.hpp  Wall.hpp  Wall.hpp.gch  main.cpp
design_patterns/Builder/src/: CMakeLists.txt  main.cpp
design_patterns/Builder/src/include/: IMapSite.hpp  Wall.hpp
design_patterns/FactoryMethod/src/: CMakeLists.txt  MazeGame.cpp  Wall.cpp  main.cpp
design_patterns/FactoryMethod/src/include/: EnchantedMazeGame.hpp  EnchantedRoom.hpp  Maze.hpp  MazeGame.hpp  RoomWithABomb.hpp  Wall.hpp
design_patterns/FactoryMethod/test/: CMakeLists.txt
design_patterns/creational_patterns/Prototype/src/: CMakeLists.txt  IMapSite.cpp  MazeGame.cpp
design_patterns/creational_patterns/Prototype/src/include/: MazeGame.hpp  Wall.hpp
design_patterns/creational_patterns/Singleton/src/: BombedMazeFactory.cpp  CMakeLists.txt  EnchantedMazeFactory.hpp  EnchantedMazeFactoryAttorneyMazeFactory.hpp  EnchantedRoom.hpp  Maze.cpp  MazeGame.cpp  MazeGame.hpp  Room.cpp  Room.hpp  RoomWithABomb.hpp  Spell.hpp  Wall.hpp  main.cpp
design_patterns/structural_patterns/Bridge/test/: CMakeLists.txt
design_patterns/structural_patterns/Composite/src/: ApplicationWindow.cpp  CMakeLists.txt  WindowImp.cpp
design_patterns/structural_patterns/Composite/src/include/: Coord.hpp
design_patterns/structural_patterns/Composite/test/: CMakeLists.txt
doxygen/: DumbMath.hpp
editors/: spacemacs.md
fibonacci_template/: CMakeLists.txt  Fibonacci.hpp  Fibonacci_template.hpp
googletest/: a.out.old  gmock.md
gtest/: DumbMath.hpp  gtest.md
nvim/: info.md
tools/: command-line.md  git-create-merge-conflict  powerline.md  zsh.md
web/: README.md
(+722 files in other folders)
